# rm-vision-newtest

./: .gitignore  CMakeLists.txt  CMakeLists.txt.backup  README.md  calibrate_camera.py  compile_safely.sh  final_demo  final_submission.cpp  fix_all.sh  fix_all_problems.sh  fix_calibrator.sh  monitor_vision.sh  quick_test.sh  rm_vision_quick.sh  rm_vision_start.sh  run.sh  run.sh.backup  safe_compile.sh  test_vision.sh
config/: detector_params.yaml
final_delivery/: CMakeLists.txt  run_project.sh
final_delivery/src/: detector.cpp  kalman_filter.cpp  main.cpp  tracker.cpp
include/auto_aim_interfaces/msg/: debug_light.hpp
old test video/: create_clear_video.py  create_simple_video.py  test_minimal.py
src/: armor.cpp  camera_calibrator.cpp  coordinate_transformer.cpp  detector.cpp  kalman_filter.cpp.eigen.backup  main.cpp  main.cpp.backup  main.cpp.bak  pnp_solver.cpp
